<resources>
    <string name="app_name">FinalTest</string>

    <string name="email_or_username">EMAIL OR USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="remember_me">Remember me</string>
    <string name="or">Or</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>

    <string name="ok">ok</string>

    <string name="sign_in">Sign In</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="internetConnectionError">No internet connection, please try again.</string>
    <string name="error_msg">Some error occurred. Please try again.</string>
    <string name="loading" />
    <string name="forgot_password">Forgot Password</string>
</resources>
