<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.finaltest.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/thirty_dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etUserName"
                style="@style/EditTextStyle"
                android:drawableLeft="@mipmap/email_icon"
                android:hint="@string/email_or_username"
                android:inputType="textEmailAddress|textNoSuggestions" />

           <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etPassword"
                    style="@style/EditTextStyle"
                    android:hint="@string/password"
                    android:drawableLeft="@mipmap/password_icon"
                    android:paddingRight="@dimen/fifty_dp"
                    android:gravity="center_vertical"
                    android:inputType="textPassword|textNoSuggestions" />

                <Button
                    android:id="@+id/btnShowPassword"
                    android:layout_width="@dimen/fourty_dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:text="@string/show"
                    android:textAllCaps="false"
                    android:textColor="@drawable/black_yellow_text_color_selector"
                    android:textSize="@dimen/font_small" />

            </RelativeLayout>




            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:clickable="true"
                android:layout_gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@drawable/black_yellow_text_color_selector" />

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/remember_me"
                android:textColor="@drawable/black_yellow_text_color_selector" />

            <Button
                android:id="@+id/btnUserLogin"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
